--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
 
     <application
@@ -52,7 +53,7 @@
 
         <service android:name=".services.TopicSubscriber" />
         <service android:name=".services.TopicPublisher" />
-        <service android:name=".services.BLE" />
+        <service android:name=".services.BLE"  />
         <service android:name="org.eclipse.paho.android.service.MqttService" />
     </application>
 
