--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,10 @@
         android:theme="@style/AppTheme"
 
         >
-        <activity android:name=".SplashScreen">
+        <activity android:name=".SplashScreen"
+
+            android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
