--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     implementation 'com.android.support:cardview-v7:23.0.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
 }
