--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:required="true" android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:required="true" android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -59,6 +61,7 @@
         <service android:name=".services.TopicSubscriber" android:stopWithTask="true" />
         <service android:name=".services.TopicPublisher" android:stopWithTask="true"/>
         <service android:name=".services.BLE" android:stopWithTask="true"  />
+        <service android:name=".services.Wifi" android:stopWithTask="true"  />
         <service android:name="org.eclipse.paho.android.service.MqttService" />
     </application>
 
